k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: capability-service
  namespace: $(kubernetes-namespace)
  labels:
    project: selfservice
    department: devex
    app: capability-service
    component: capability-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capability-service
  template:
    metadata:
      labels:
        app: capability-service
        project: selfservice
        department: devex
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: capability-service
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/capability-service:$(Build.BuildId)
        ports:
        - containerPort: 80
          name: web
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "200m"
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 60
          timeoutSeconds: 5
          httpGet:
            port: web
            path: /healthz
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          httpGet:
            port: web
            path: /healthz
