k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: capability-service
  namespace: $(kubernetes-namespace)
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: capability-service
    project: selfservice
    department: devex    
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  selector:
    app: capability-service
