k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: team-service
  namespace: $(kubernetes-namespace)
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: turing-traefik-alb-1628308904.eu-west-1.elb.amazonaws.com
      http:
        paths:
          - path: /team-service
            backend:
              serviceName: team-service
              servicePort: external
