k8s/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: capability-service
  namespace: selfservice
spec:
  routes:
    - kind: Rule
      match: Host(`api.hellman.oxygen.dfds.cloud`) && PathPrefix(`/capability`)
      priority: 10
      middlewares:
        - name: capability-service
          namespace: selfservice
      services:
        - kind: Service
          name: capability-service
          namespace: selfservice
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: capability-service
  namespace: selfservice
spec:
  stripPrefix:
    prefixes:
    - /capability
